--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,34 @@
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
     color: #fff;
     transition: 0.5s;
     -o-transition: 0.5s;
     -webkit-transition: 0.5s;
     -ms-transition: 0.5s;
+    text-align: center;
 }
-h1 {
+#clock {
 font-size: 250px;
 color: #fff;
-margin-bottom: 20px;
+margin-bottom: 0px;
+padding-right: 0px;
+size: 100px;
+
 }
 
 #color {
     font-size: 100px;
     color: #fff;
+}
+
+#ampm {
+    font-size: 150px;
+    left: 1500px;
+    bottom: 500px;
+    position: absolute;
+    padding-right: 300px;
+    padding-bottom: 0px;
+    margin-bottom: 40px;
+    margin-top: 0px;
+
 }
