--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,16 @@
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #fff;
+    
     transition: 0.5s;
     -o-transition: 0.5s;
     -webkit-transition: 0.5s;
     -ms-transition: 0.5s;
     text-align: center;
+    color : White;
 }
 #clock {
 font-size: 250px;
-color: #fff;
+
 margin-bottom: 0px;
 padding-right: 0px;
 size: 100px;
@@ -18,7 +19,7 @@ size: 100px;
 
 #color {
     font-size: 100px;
-    color: #fff;
+   
 }
 
 #ampm {
